--- a/main.yml
+++ b/main.yml
@@ -25,6 +25,8 @@
   tasks:
     - import_tasks: tasks/defaults.yml
       tags: defaults
+    - import_tasks: tasks/plists.yml
+      tags: plists
     - import_tasks: tasks/spotlight.yml
     - import_tasks: tasks/backup.yml
       tags: backup
