--- a/default.config.yml
+++ b/default.config.yml
@@ -40,6 +40,8 @@ homebrew_cask_apps:
   - keepassxc
   - firefox
   - google-chrome
+
+homebrew_cask_apps_extra:
   - intellij-idea-ce
   - libreoffice
   - utm
@@ -79,20 +81,22 @@ dockitems_persist_items:
     path: '/Applications/KeePassXC.app'
   - name: 'Sublime Text'
     path: '/Applications/Sublime Text.app'
-  - name: 'IntelliJ IDEA CE'
-    path: '/Applications/IntelliJ IDEA CE.app'
   - name: 'Terminal'
     path: '/System/Applications/Utilities/Terminal.app'
-  - name: 'LibreOffice'
-    path: '/Applications/LibreOffice.app'
-  - name: 'UTM'
-    path: '/Applications/UTM.app'
   - name: 'Activity Monitor'
     path: '/System/Applications/Utilities/Activity Monitor.app'
   - name: 'Disk Utility'
     path: '/System/Applications/Utilities/Disk Utility.app'
   - name: 'System Settings'
     path: '/System/Applications/System Settings.app'
+
+dockitems_persist_items_extra:
+  - name: 'IntelliJ IDEA CE'
+    path: '/Applications/IntelliJ IDEA CE.app'
+  - name: 'LibreOffice'
+    path: '/Applications/LibreOffice.app'
+  - name: 'UTM'
+    path: '/Applications/UTM.app'
 
 no_xcode_install: true
 spotlight_index_items:
