Moved the widget defaults setting to sequoia - It is not a new setting to tahoe

--- a/default.config.yml
+++ b/default.config.yml
@@ -231,10 +231,9 @@ osx_defaults_sequoia:
   # Disable dragging window on top to enter Mission Control
   - { domain: com.apple.dock, key: enterMissionControlByTopWindowDrag, type: bool, value: false }
 
-osx_defaults_tahoe:
   ## Widget
 
-  # Always dim desktop widgets
+  # Always dim desktop widgets / monochrome
   - { domain: com.apple.widgets, key: widgetAppearance, type: int, value: 0 }
 
 plists:
